omz [ost processing rules added
